[package]
name = "rukby"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
futures = "0.3.28"
log = "0.4.17"
meilisearch-sdk = "0.23.1"
rand = "0.8.5"
readability = "0.2.0"
reqwest = { version = "0.11.17", features = ["blocking"] }
serde = "1.0.162"
